# rust-1d-fem

./: Cargo.toml  README.md  sample.py
src/: lib.rs  main.rs
