[package]
name = "rust-1d-fem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33.2"
ndarray = "0.16.1"
ndarray-linalg = "0.17.0"
plotters = { version = "0.3.7", features = ["ab_glyph", "fontconfig-dlopen"] }
